--- a/src/lib/global.css
+++ b/src/lib/global.css
@@ -231,3 +231,23 @@
 * {
 	font-family: 'Montserrat';
 }
+
+*::-webkit-scrollbar {
+	width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+	background: #f0f0f0;
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: rgba(37, 37, 37, 0.363);
+	border-radius: 20px;
+}
+
+img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: 5;
+}
