--- a/src/lib/global.css
+++ b/src/lib/global.css
@@ -251,3 +251,103 @@ img {
 	object-fit: cover;
 	z-index: 5;
 }
+
+.ticketItem__heading-time svg {
+	transition: 0.3s ease;
+}
+
+
+.ticketItem__heading-time:hover svg {
+	transform: rotate(180deg);
+}
+
+.ticket-details__image {
+	height: 200px;
+	margin-top: 30px;
+	display: inline-block;
+	border: 1px solid gainsboro;
+	border-radius: 6px;
+	overflow: hidden;
+}
+
+.ticket-details__image.preview {
+	width: 100%;
+	height: 100%;
+	margin-top: 0;
+}
+
+@media (min-width: 768px) {
+	.ticket-details__image {
+		width: 30%;
+
+	}
+}
+
+@media (min-width: 560px) and (max-width: 768.02px) {
+	.ticket-details__image {
+		width: 48%;
+	}
+}
+
+@media (max-width: 564px) {
+	.ticket-details__image {
+		width: 100%;
+	}
+}
+
+
+
+.ticket-details__image img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+}
+
+.ticket-details__blockquote {
+	font-style: italic;
+	border-left: 3px solid #b9b9b9;
+	padding-left: 0.6em;
+	margin-left: 0;
+}
+
+.ticket-details__ul {
+	display: block;
+	list-style-type: disc;
+	margin-block-start: 1em;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
+	padding-inline-start: 40px;
+
+}
+
+.ticket-details__ol {
+	display: block;
+	list-style-type: decimal;
+	margin-block-start: 1em;
+	margin-block-end: 1em;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
+	padding-inline-start: 40px;
+}
+
+.ticket-details__ul+br+.ticket-details__ol,
+.ticket-details__ol+br+.ticket-details__ul {
+	margin-top: 0;
+	margin-left: 30px;
+}
+
+
+.syntaxhl {
+	background: rgba(62, 91, 118, 0.08);
+	padding: 0.1em 0.1em;
+	border-radius: 0.1em;
+}
+
+.syntaxhl .nt {
+	color: #007700;
+}
+
+.syntaxhl .nt:first-child,
+.syntaxhl .nt:last-child {
+	display: none;
+}
